--- a/spring-boot-spring-security-jwt-authentication-master/src/main/resources/application.properties
+++ b/spring-boot-spring-security-jwt-authentication-master/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 server.port=8080
 
+api:
+    prefix: localhost:8080/
+
 spring.datasource.url=jdbc:mysql://localhost:3306/100ngayha
 spring.datasource.username=root
 spring.datasource.password=12345678x@X
