--- a/spring-boot-spring-security-jwt-authentication-master/src/main/resources/application.properties
+++ b/spring-boot-spring-security-jwt-authentication-master/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=8080
 
-api:
-    prefix: localhost:8080/
+#api:
+#    prefix: localhost:8080/
 
 spring.datasource.url=jdbc:mysql://localhost:3306/100ngayha
 spring.datasource.username=root
@@ -13,3 +13,10 @@ spring.jpa.hibernate.ddl-auto=update
 # App Properties
 bezkoder.app.jwtSecret= ======================BezKoder=Spring===========================
 bezkoder.app.jwtExpirationMs=86400000
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=bejavadev@gmail.com
+spring.mail.password=yraf mjio vjxe kujk
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
