--- a/spring-boot-spring-security-jwt-authentication-master/src/main/resources/application.properties
+++ b/spring-boot-spring-security-jwt-authentication-master/src/main/resources/application.properties
@@ -20,3 +20,17 @@ spring.mail.username=bejavadev@gmail.com
 spring.mail.password=yraf mjio vjxe kujk
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+
+
+## Give a name to the eureka server
+#spring.application.name=eureka-server
+#
+## default port for eureka server
+#server.port=8761
+#
+## eureka by default will register itself as a client. So, we need to set it to false.
+## What's a client server? See other microservices (image, gallery, auth, etc).
+#eureka.client.register-with-eureka=false
+#eureka.client.fetch-registry=false
+
